Refatorando Alurator