@@ -1,5 +1,10 @@
 package br.com.alura.alurator;
 
+import java.lang.reflect.InvocationTargetException;
+
+import br.com.alura.alurator.protocolo.Request;
+import br.com.alura.alurator.reflexao.Reflexao;
+
 public class Alurator {
 	
 	
@@ -12,24 +17,24 @@ public class Alurator {
 	
 	
 	public Object executa(String url) {
-		// processa a requisicao executando o método da classe em questãp
 		
-		// produto lista
+		Request request = new Request(url);
 		
-		String[] partesUrl = url.replaceFirst("/", "").split("/");
+		String nomeControle = request.getNomeControle();
 		
-		String nomeControle = Character.toUpperCase(partesUrl[0].charAt(0)) + partesUrl[0].substring(1) + "Controller";
-		
-		try {
-			Class <?> classeControle = Class.forName(pacoteBase + nomeControle);
-			Object instanciaControle = classeControle.newInstance();
+					
+			Object instanciaControle = new Reflexao()
+			.refleteClasse(pacoteBase + nomeControle)
+			.getConstrutorPadrao()
+			.invoca();
+			
+			
+			
+//			Class <?> classeControle = Class.forName(pacoteBase + nomeControle);
+//			Object instanciaControle = classeControle.getDeclaredConstructor().newInstance();
+//			
 			System.out.println(instanciaControle);
 			return null;
-		} catch (ClassNotFoundException| InstantiationException | IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			throw new RuntimeException(e);
-		}
 		
 		
 	}
